# markdown-parser

./: .gitignore  README.md  demo.py  demo_output.html  parse_table.py  pyproject.toml  todo.md
.cursor/rules/: main.mdc
docs/: REGEX_OPTIMIZATION_REVISED.md  design.md  todo.md
examples/: example.py
src/markdown_parser/: __init__.py  exporter.py  models.py  parser.py  regex_patterns.py
src/markdown_parser/elements/: __init__.py  code.py  custom.py  heading.py  link.py  list.py  quote.py  table.py  text.py
tests/: __init__.py  test_html_export.py  test_parser.py  test_performance_benchmark.py
tests/test_elements/: __init__.py  test_text.py
tests/test_files/: basic_syntax.md  complex_document.md  extended_syntax.md  index.md
